--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>macbook-oasis-marketplace</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Jual Macbook Terpercaya #1 Jakarta</title>
+    <meta name="description" content="Marketplace MacBook terpercaya dan bergaransi resmi di Jakarta." />
+    <meta name="author" content="Macweb" />
 
-    <meta property="og:title" content="macbook-oasis-marketplace" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <meta property="og:title" content="Jual Macbook Terpercaya #1 Jakarta" />
+    <meta property="og:description" content="Marketplace MacBook terpercaya dan bergaransi resmi di Jakarta." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
